# Numula

./: .travis.yml  README.md  app57.py  audio_test.py  chords.py  colorednoise.py  cryptogram.py  curve_test.py  index.md  nocturne.py  normal.py  notate.py  notate_nuance.py  notate_score.py  note.py  notes.txt  nscore.py  nuance.py  nuance_notate.py  numula_audio.py  op57.py  pianoteq.py  pianoteq.txt  pianoteq_presets.txt  poly_pan.py  pyproject.toml  rand.py  read_midifile.py  requirements.txt  shepard.py  spatialize.py  test.py  test_midifile.py  test_notate.py  test_note.py  test_nuance.py  wasserklavier.py  wave_test.py
comp/: brownian.py  comp_notes.txt  curtain.py  cycle.py  pitch.py  surf.py  time_list.py
doc/: chopin.odg
examples/: audio_test.py  audio_try.py  chopin_notes.txt  chopin_prelude_8.py  chords.py  colorednoise.py  colorednoise_test.py  cryptogram.py  curtain.py  curve_test.py  goldberg.py  helps_faure.py  helps_rach.py  helps_ravel.py  nocturne.py  normal.py  op57.py  pianoteq_server.py  shepard.py  test.py  test_notate.py  test_notate_nuance.py  test_note.py  test_nuance.py  test_pianoteq.py  test_pitch.py  wasserklavier.py
numula/: MidiFile.py  constants.py  dipa.py  ipa.py  notate.py  notate_nuance.py  notate_score.py  nscore.py  nsh.py  nshl.py  nuance.py  ornament.py  pft.py  pianoteq.py  pianoteq_rpc.py  pianoteq_rpc_doc.py  pianoteq_rpc_doc.txt  pitch.py  poly_pan.py  read_midifile.py  spatialize.py  vol_name.py
test/: audio_test.py  chords.py  colorednoise_test.py  curve_test.py  normal.py  nsh_test.py  rand.py  test.py  test_ipa.py  (+13 more)
(+3 files in other folders)
